infrastructure/prereqs/azuredeploy.template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "azure_firewall_name": {
            "defaultValue": "bjdproxy-central",
            "type": "String"
        },
        "default_nsg_name": {
            "defaultValue": "default-nsg",
            "type": "String"
        },
        "internet_nsg_name": {
            "defaultValue": "internet-nsg",
            "type": "String"
        },
        "public_ip_address_name": {
            "defaultValue": "bjdproxy-central-pip",
            "type": "String"
        },
        "routetable_name": {
            "defaultValue": "bjdproxy-central-routetable",
            "type": "String"
        },
        "firewallpolicy_name": {
            "defaultValue": "bjdproxy-central-policy",
            "type": "String"
        },
        "virtual_network_name": {
            "defaultValue": "DevSub02-Vnet-Sandbox-001",
            "type": "String"
        },
        "location": {
            "defaultValue": "[resourceGroup().location]",
            "type": "string"
        }
    },
    "variables": {

    },
    "resources": [
        {
            "type": "Microsoft.Network/firewallPolicies",
            "apiVersion": "2020-11-01",
            "name": "[parameters('firewallpolicy_name')]",
            "location": "[parameters('location')]",
            "properties": {
                "sku": {
                    "tier": "Standard"
                },
                "threatIntelMode": "Alert",
                "dnsSettings": {
                    "servers": [],
                    "enableProxy": true
                }
            }
        },
        {
            "type": "Microsoft.Network/firewallPolicies/ruleCollectionGroups",
            "apiVersion": "2020-11-01",
            "name": "[concat(parameters('firewallpolicy_name'), '/default_rules_collection')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/firewallPolicies', parameters('firewallpolicy_name'))]"
            ],
            "properties": {
                "priority": 200,
                "ruleCollections": [
                    {
                        "ruleCollectionType": "FirewallPolicyFilterRuleCollection",
                        "action": {
                            "type": "Allow"
                        },
                        "rules": [
                            {
                                "ruleType": "ApplicationRule",
                                "name": "azure-management",
                                "protocols": [
                                    {
                                        "protocolType": "Https",
                                        "port": 443
                                    }
                                ],
                                "fqdnTags": [],
                                "webCategories": [],
                                "targetFqdns": [
                                    "management.microsoft.com"
                                ],
                                "targetUrls": [],
                                "terminateTLS": false,
                                "sourceAddresses": [
                                    "*"
                                ],
                                "destinationAddresses": [],
                                "sourceIpGroups": []
                            },
                            {
                                "ruleType": "ApplicationRule",
                                "name": "docker",
                                "protocols": [
                                    {
                                        "protocolType": "Https",
                                        "port": 443
                                    }
                                ],
                                "fqdnTags": [],
                                "webCategories": [],
                                "targetFqdns": [
                                    "production.cloudflare.docker.com",
                                    "*.docker.io",
                                    "download.docker.com"
                                ],
                                "targetUrls": [],
                                "terminateTLS": false,
                                "sourceAddresses": [
                                    "*"
                                ],
                                "destinationAddresses": [],
                                "sourceIpGroups": []
                            },
                            {
                                "ruleType": "ApplicationRule",
                                "name": "monitoring-ods",
                                "protocols": [
                                    {
                                        "protocolType": "Https",
                                        "port": 443
                                    }
                                ],
                                "fqdnTags": [],
                                "webCategories": [],
                                "targetFqdns": [
                                    "*.ods.opinsights.azure.com"
                                ],
                                "targetUrls": [],
                                "terminateTLS": false,
                                "sourceAddresses": [
                                    "*"
                                ],
                                "destinationAddresses": [],
                                "sourceIpGroups": []
                            },
                            {
                                "ruleType": "ApplicationRule",
                                "name": "mcr.microsoft.com",
                                "protocols": [
                                    {
                                        "protocolType": "Https",
                                        "port": 443
                                    }
                                ],
                                "fqdnTags": [],
                                "webCategories": [],
                                "targetFqdns": [
                                    "mcr.microsoft.com"
                                ],
                                "targetUrls": [],
                                "terminateTLS": false,
                                "sourceAddresses": [
                                    "*"
                                ],
                                "destinationAddresses": [],
                                "sourceIpGroups": []
                            },
                            {
                                "ruleType": "ApplicationRule",
                                "name": "policy-store",
                                "protocols": [
                                    {
                                        "protocolType": "Https",
                                        "port": 443
                                    }
                                ],
                                "fqdnTags": [],
                                "webCategories": [],
                                "targetFqdns": [
                                    "store.policy.core.windows.net"
                                ],
                                "targetUrls": [],
                                "terminateTLS": false,
                                "sourceAddresses": [
                                    "*"
                                ],
                                "destinationAddresses": [],
                                "sourceIpGroups": []
                            },
                            {
                                "ruleType": "ApplicationRule",
                                "name": "aad-login",
                                "protocols": [
                                    {
                                        "protocolType": "Https",
                                        "port": 443
                                    }
                                ],
                                "fqdnTags": [],
                                "webCategories": [],
                                "targetFqdns": [
                                    "login.microsoftonline.com"
                                ],
                                "targetUrls": [],
                                "terminateTLS": false,
                                "sourceAddresses": [
                                    "*"
                                ],
                                "destinationAddresses": [],
                                "sourceIpGroups": []
                            },
                            {
                                "ruleType": "ApplicationRule",
                                "name": "policy-data",
                                "protocols": [
                                    {
                                        "protocolType": "Https",
                                        "port": 443
                                    }
                                ],
                                "fqdnTags": [],
                                "webCategories": [],
                                "targetFqdns": [
                                    "data.policy.core.windows.net"
                                ],
                                "targetUrls": [],
                                "terminateTLS": false,
                                "sourceAddresses": [
                                    "*"
                                ],
                                "destinationAddresses": [],
                                "sourceIpGroups": []
                            },
                            {
                                "ruleType": "ApplicationRule",
                                "name": "ubuntu-changelogs",
                                "protocols": [
                                    {
                                        "protocolType": "Http",
                                        "port": 80
                                    },
                                    {
                                        "protocolType": "Https",
                                        "port": 443
                                    }
                                ],
                                "fqdnTags": [],
                                "webCategories": [],
                                "targetFqdns": [
                                    "changelogs.ubuntu.com"
                                ],
                                "targetUrls": [],
                                "terminateTLS": false,
                                "sourceAddresses": [
                                    "*"
                                ],
                                "destinationAddresses": [],
                                "sourceIpGroups": []
                            },
                            {
                                "ruleType": "ApplicationRule",
                                "name": "ubuntu-security",
                                "protocols": [
                                    {
                                        "protocolType": "Http",
                                        "port": 80
                                    },
                                    {
                                        "protocolType": "Https",
                                        "port": 443
                                    }
                                ],
                                "fqdnTags": [],
                                "webCategories": [],
                                "targetFqdns": [
                                    "security.ubuntu.com"
                                ],
                                "targetUrls": [],
                                "terminateTLS": false,
                                "sourceAddresses": [
                                    "*"
                                ],
                                "destinationAddresses": [],
                                "sourceIpGroups": []
                            },
                            {
                                "ruleType": "ApplicationRule",
                                "name": "monitoring-uri",
                                "protocols": [
                                    {
                                        "protocolType": "Https",
                                        "port": 443
                                    }
                                ],
                                "fqdnTags": [],
                                "webCategories": [],
                                "targetFqdns": [
                                    "*.monitoring.azure.com",
                                    "*.monitor.azure.com"
                                ],
                                "targetUrls": [],
                                "terminateTLS": false,
                                "sourceAddresses": [
                                    "*"
                                ],
                                "destinationAddresses": [],
                                "sourceIpGroups": []
                            },
                            {
                                "ruleType": "ApplicationRule",
                                "name": "aks-packages",
                                "protocols": [
                                    {
                                        "protocolType": "Https",
                                        "port": 443
                                    }
                                ],
                                "fqdnTags": [],
                                "webCategories": [],
                                "targetFqdns": [
                                    "packages.microsoft.com"
                                ],
                                "targetUrls": [],
                                "terminateTLS": false,
                                "sourceAddresses": [
                                    "*"
                                ],
                                "destinationAddresses": [],
                                "sourceIpGroups": []
                            },
                            {
                                "ruleType": "ApplicationRule",
                                "name": "monitoring-oms",
                                "protocols": [
                                    {
                                        "protocolType": "Https",
                                        "port": 443
                                    }
                                ],
                                "fqdnTags": [],
                                "webCategories": [],
                                "targetFqdns": [
                                    "*.oms.opinsights.azure.com"
                                ],
                                "targetUrls": [],
                                "terminateTLS": false,
                                "sourceAddresses": [
                                    "*"
                                ],
                                "destinationAddresses": [],
                                "sourceIpGroups": []
                            },
                            {
                                "ruleType": "ApplicationRule",
                                "name": "mcr-data",
                                "protocols": [
                                    {
                                        "protocolType": "Https",
                                        "port": 443
                                    }
                                ],
                                "fqdnTags": [],
                                "webCategories": [],
                                "targetFqdns": [
                                    "*.data.mcr.microsoft.com"
                                ],
                                "targetUrls": [],
                                "terminateTLS": false,
                                "sourceAddresses": [
                                    "*"
                                ],
                                "destinationAddresses": [],
                                "sourceIpGroups": []
                            },
                            {
                                "ruleType": "ApplicationRule",
                                "name": "monitoring-telemetry",
                                "protocols": [
                                    {
                                        "protocolType": "Https",
                                        "port": 443
                                    }
                                ],
                                "fqdnTags": [],
                                "webCategories": [],
                                "targetFqdns": [
                                    "dc.services.visualstudio.com"
                                ],
                                "targetUrls": [],
                                "terminateTLS": false,
                                "sourceAddresses": [
                                    "*"
                                ],
                                "destinationAddresses": [],
                                "sourceIpGroups": []
                            },
                            {
                                "ruleType": "ApplicationRule",
                                "name": "ubuntu-archive",
                                "protocols": [
                                    {
                                        "protocolType": "Http",
                                        "port": 80
                                    },
                                    {
                                        "protocolType": "Https",
                                        "port": 443
                                    }
                                ],
                                "fqdnTags": [],
                                "webCategories": [],
                                "targetFqdns": [
                                    "azure.archive.ubuntu.com"
                                ],
                                "targetUrls": [],
                                "terminateTLS": false,
                                "sourceAddresses": [
                                    "*"
                                ],
                                "destinationAddresses": [],
                                "sourceIpGroups": []
                            },
                            {
                                "ruleType": "ApplicationRule",
                                "name": "github",
                                "protocols": [
                                    {
                                        "protocolType": "Https",
                                        "port": 443
                                    }
                                ],
                                "fqdnTags": [],
                                "webCategories": [],
                                "targetFqdns": [
                                    "github.com",
                                    "raw.githubusercontent.com"
                                ],
                                "targetUrls": [],
                                "terminateTLS": false,
                                "sourceAddresses": [
                                    "*"
                                ],
                                "destinationAddresses": [],
                                "sourceIpGroups": []
                            },
                            {
                                "ruleType": "ApplicationRule",
                                "name": "mcr-mirror",
                                "protocols": [
                                    {
                                        "protocolType": "Https",
                                        "port": 443
                                    }
                                ],
                                "fqdnTags": [],
                                "webCategories": [],
                                "targetFqdns": [
                                    "acs-mirror.azureedge.net"
                                ],
                                "targetUrls": [],
                                "terminateTLS": false,
                                "sourceAddresses": [
                                    "*"
                                ],
                                "destinationAddresses": [],
                                "sourceIpGroups": []
                            },
                            {
                                "ruleType": "ApplicationRule",
                                "name": "container_repo",
                                "protocols": [
                                    {
                                        "protocolType": "Https",
                                        "port": 443
                                    }
                                ],
                                "fqdnTags": [],
                                "webCategories": [],
                                "targetFqdns": [
                                    "bjd145.azurecr.io",
                                    "bjd145.centralus.data.azurecr.io",
                                    "bjd145.centralus.data.azurecr.io"
                                ],
                                "targetUrls": [],
                                "terminateTLS": false,
                                "sourceAddresses": [
                                    "*"
                                ],
                                "destinationAddresses": [],
                                "sourceIpGroups": []
                            },
                            {
                                "ruleType": "ApplicationRule",
                                "name": "github-container-repo",
                                "protocols": [
                                    {
                                        "protocolType": "Https",
                                        "port": 443
                                    }
                                ],
                                "fqdnTags": [],
                                "webCategories": [],
                                "targetFqdns": [
                                    "ghcr.io",
                                    "pkg-containers.githubusercontent.com"
                                ],
                                "targetUrls": [],
                                "terminateTLS": false,
                                "sourceAddresses": [
                                    "*"
                                ],
                                "destinationAddresses": [],
                                "sourceIpGroups": []
                            },
                            {
                                "ruleType": "ApplicationRule",
                                "name": "keyvault",
                                "protocols": [
                                    {
                                        "protocolType": "Https",
                                        "port": 443
                                    }
                                ],
                                "fqdnTags": [],
                                "webCategories": [],
                                "targetFqdns": [
                                    "chat-e0ce7b6-kv.vault.azure.net"
                                ],
                                "targetUrls": [],
                                "terminateTLS": false,
                                "sourceAddresses": [
                                    "*"
                                ],
                                "destinationAddresses": [],
                                "sourceIpGroups": []
                            },
                            {
                                "ruleType": "ApplicationRule",
                                "name": "cognitive-services",
                                "protocols": [
                                    {
                                        "protocolType": "Https",
                                        "port": 443
                                    }
                                ],
                                "fqdnTags": [],
                                "webCategories": [],
                                "targetFqdns": [
                                    "centralus.api.cognitive.microsoft.com",
                                    "centralus.api.cognitive.microsoft.com"
                                ],
                                "targetUrls": [],
                                "terminateTLS": false,
                                "sourceAddresses": [
                                    "*"
                                ],
                                "destinationAddresses": [],
                                "sourceIpGroups": []
                            },
                            {
                                "ruleType": "ApplicationRule",
                                "name": "b2c",
                                "protocols": [
                                    {
                                        "protocolType": "Https",
                                        "port": 443
                                    }
                                ],
                                "fqdnTags": [],
                                "webCategories": [],
                                "targetFqdns": [
                                    "mmztkupi.b2clogin.com"
                                ],
                                "targetUrls": [],
                                "terminateTLS": false,
                                "sourceAddresses": [
                                    "*"
                                ],
                                "destinationAddresses": [],
                                "sourceIpGroups": []
                            },
                            {
                                "ruleType": "ApplicationRule",
                                "name": "osm",
                                "protocols": [
                                    {
                                        "protocolType": "Https",
                                        "port": 443
                                    }
                                ],
                                "fqdnTags": [],
                                "webCategories": [],
                                "targetFqdns": [
                                    "openservicemesh.github.io"
                                ],
                                "targetUrls": [],
                                "terminateTLS": false,
                                "sourceAddresses": [
                                    "*"
                                ],
                                "destinationAddresses": [],
                                "sourceIpGroups": []
                            },
                            {
                                "ruleType": "ApplicationRule",
                                "name": "contour",
                                "protocols": [
                                    {
                                        "protocolType": "Https",
                                        "port": 443
                                    }
                                ],
                                "fqdnTags": [],
                                "webCategories": [],
                                "targetFqdns": [
                                    "charts.bitnami.com"
                                ],
                                "targetUrls": [],
                                "terminateTLS": false,
                                "sourceAddresses": [
                                    "*"
                                ],
                                "destinationAddresses": [],
                                "sourceIpGroups": []
                            },
                            {
                                "ruleType": "ApplicationRule",
                                "name": "dapr",
                                "protocols": [
                                    {
                                        "protocolType": "Https",
                                        "port": 443
                                    }
                                ],
                                "fqdnTags": [],
                                "webCategories": [],
                                "targetFqdns": [
                                    "dapr.github.io"
                                ],
                                "targetUrls": [],
                                "terminateTLS": false,
                                "sourceAddresses": [
                                    "*"
                                ],
                                "destinationAddresses": [],
                                "sourceIpGroups": []
                            },
                            {
                                "ruleType": "ApplicationRule",
                                "name": "kured",
                                "protocols": [
                                    {
                                        "protocolType": "Https",
                                        "port": 443
                                    }
                                ],
                                "fqdnTags": [],
                                "webCategories": [],
                                "targetFqdns": [
                                    "weaveworks.github.io"
                                ],
                                "targetUrls": [],
                                "terminateTLS": false,
                                "sourceAddresses": [
                                    "*"
                                ],
                                "destinationAddresses": [],
                                "sourceIpGroups": []
                            },
                            {
                                "ruleType": "ApplicationRule",
                                "name": "keda",
                                "protocols": [
                                    {
                                        "protocolType": "Https",
                                        "port": 443
                                    }
                                ],
                                "fqdnTags": [],
                                "webCategories": [],
                                "targetFqdns": [
                                    "kedacore.github.io"
                                ],
                                "targetUrls": [],
                                "terminateTLS": false,
                                "sourceAddresses": [
                                    "*"
                                ],
                                "destinationAddresses": [],
                                "sourceIpGroups": []
                            },
                            {
                                "ruleType": "ApplicationRule",
                                "name": "traduire",
                                "protocols": [
                                    {
                                        "protocolType": "Https",
                                        "port": 443
                                    }
                                ],
                                "fqdnTags": [],
                                "webCategories": [],
                                "targetFqdns": [
                                    "trad8b43xz-pubsub01.webpubsub.azure.com"
                                ],
                                "targetUrls": [],
                                "terminateTLS": false,
                                "sourceAddresses": [
                                    "*"
                                ],
                                "destinationAddresses": [],
                                "sourceIpGroups": []
                            },
                            {
                                "ruleType": "ApplicationRule",
                                "name": "Redhat",
                                "protocols": [
                                    {
                                        "protocolType": "Https",
                                        "port": 44
                                    },
                                    {
                                        "protocolType": "Http",
                                        "port": 80
                                    }
                                ],
                                "fqdnTags": [],
                                "webCategories": [],
                                "targetFqdns": [
                                    "cdn-ubi.redhat.com",
                                    "mirrorlist.centos.org",
                                    "centos.mirror.shastacoe.net"
                                ],
                                "targetUrls": [],
                                "terminateTLS": false,
                                "sourceAddresses": [
                                    "*"
                                ],
                                "destinationAddresses": [],
                                "sourceIpGroups": []
                            },
                            {
                                "ruleType": "ApplicationRule",
                                "name": "google-container-repo",
                                "protocols": [
                                    {
                                        "protocolType": "Https",
                                        "port": 443
                                    }
                                ],
                                "fqdnTags": [],
                                "webCategories": [],
                                "targetFqdns": [
                                    "gcr.io",
                                    "storage.googleapis.com"
                                ],
                                "targetUrls": [],
                                "terminateTLS": false,
                                "sourceAddresses": [
                                    "*"
                                ],
                                "destinationAddresses": [],
                                "sourceIpGroups": []
                            }
                        ],
                        "name": "app_rule_collection",
                        "priority": 500
                    },
                    {
                        "ruleCollectionType": "FirewallPolicyFilterRuleCollection",
                        "action": {
                            "type": "Allow"
                        },
                        "rules": [
                            {
                                "ruleType": "NetworkRule",
                                "name": "time",
                                "ipProtocols": [
                                    "UDP"
                                ],
                                "sourceAddresses": [
                                    "*"
                                ],
                                "sourceIpGroups": [],
                                "destinationAddresses": [],
                                "destinationIpGroups": [],
                                "destinationFqdns": [
                                    "ntp.ubuntu.com"
                                ],
                                "destinationPorts": [
                                    "123"
                                ]
                            },
                            {
                                "ruleType": "NetworkRule",
                                "name": "monitor",
                                "ipProtocols": [
                                    "TCP"
                                ],
                                "sourceAddresses": [
                                    "*"
                                ],
                                "sourceIpGroups": [],
                                "destinationAddresses": [
                                    "AzureMonitor"
                                ],
                                "destinationIpGroups": [],
                                "destinationFqdns": [],
                                "destinationPorts": [
                                    "443"
                                ]
                            },
                            {
                                "ruleType": "NetworkRule",
                                "name": "github",
                                "ipProtocols": [
                                    "TCP"
                                ],
                                "sourceAddresses": [
                                    "*"
                                ],
                                "sourceIpGroups": [],
                                "destinationAddresses": [],
                                "destinationIpGroups": [],
                                "destinationFqdns": [
                                    "github.com"
                                ],
                                "destinationPorts": [
                                    "22"
                                ]
                            },
                            {
                                "ruleType": "NetworkRule",
                                "name": "github-raw",
                                "ipProtocols": [
                                    "TCP"
                                ],
                                "sourceAddresses": [
                                    "*"
                                ],
                                "sourceIpGroups": [],
                                "destinationAddresses": [],
                                "destinationIpGroups": [],
                                "destinationFqdns": [
                                    "raw.githubusercontent.com"
                                ],
                                "destinationPorts": [
                                    "22"
                                ]
                            }
                        ],
                        "name": "network_rule_collection",
                        "priority": 400
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2020-11-01",
            "name": "[parameters('default_nsg_name')]",
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2020-11-01",
            "name": "[parameters('internet_nsg_name')]",
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "HTTP",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "HTTPS",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowGatewayManager",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "GatewayManager",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowSshRdpOutbound",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 130,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [
                                "22",
                                "3389"
                            ],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureCloudOutbound",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "AzureCloud",
                            "access": "Allow",
                            "priority": 140,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkWatchers",
            "apiVersion": "2020-11-01",
            "name": "NetworkWatcher_centralus",
            "location": "[parameters('location')]",
            "properties": {}
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2020-11-01",
            "name": "[parameters('public_ip_address_name')]",
            "location": "[parameters('location')]",
            "sku": {
                "name": "Standard",
                "tier": "Regional"
            },
            "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            }
        },
        {
            "type": "Microsoft.Network/routeTables",
            "apiVersion": "2020-11-01",
            "name": "[parameters('routetable_name')]",
            "location": "[parameters('location')]",
            "tags": {
            },
            "properties": {
                "disableBgpRoutePropagation": true,
                "routes": [
                    {
                        "name": "DefaultRoute",
                        "properties": {
                            "addressPrefix": "0.0.0.0/0",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "10.8.254.4",
                            "hasBgpOverride": false
                        }
                    },
                    {
                        "name": "HomeNetwork",
                        "properties": {
                            "addressPrefix": "172.16.201.0/24",
                            "nextHopType": "VirtualNetworkGateway",
                            "hasBgpOverride": false
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/azureFirewalls",
            "apiVersion": "2020-11-01",
            "name": "[parameters('azure_firewall_name')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('public_ip_address_name'))]",
                "[resourceId('Microsoft.Network/firewallPolicies', parameters('firewallpolicy_name'))]"
            ],
            "properties": {
                "sku": {
                    "name": "AZFW_VNet",
                    "tier": "Standard"
                },
                "threatIntelMode": "Alert",
                "additionalProperties": {},
                "ipConfigurations": [
                    {
                        "name": "[concat(parameters('public_ip_address_name'), '-pip')]",
                        "properties": {
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('public_ip_address_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtual_network_name'), 'AzureFirewallSubnet')]"
                            }
                        }
                    }
                ],
                "networkRuleCollections": [],
                "applicationRuleCollections": [],
                "natRuleCollections": [],
                "firewallPolicy": {
                    "id": "[resourceId('Microsoft.Network/firewallPolicies', parameters('firewallpolicy_name'))]"
                }
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2020-11-01",
            "name": "[parameters('virtual_network_name')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('default_nsg_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('internet_nsg_name'))]",
                "[resourceId('Microsoft.Network/routeTables', parameters('routetable_name'))]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.8.0.0/16"
                    ]
                },
                "dhcpOptions": {
                    "dnsServers": [
                        "10.1.6.4"
                    ]
                },
                "subnets": [
                    {
                        "name": "kubernetes",
                        "properties": {
                            "addressPrefix": "10.8.4.0/22",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('default_nsg_name'))]"
                            },
                            "serviceEndpoints": [
                                {
                                    "service": "Microsoft.KeyVault",
                                    "locations": [
                                        "*"
                                    ]
                                }
                            ],
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }
                    },
                    {   
                        "name": "AzureFirewallSubnet",
                        "properties": {
                            "addressPrefix": "10.8.254.0/24",
                            "serviceEndpoints": [
                                {
                                    "service": "Microsoft.KeyVault",
                                    "locations": [
                                        "*"
                                    ]
                                }
                            ],
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Enabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }
                    },
                    {
                        "name": "AzureBastionSubnet",
                        "properties": {
                            "addressPrefix": "10.8.0.0/24",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('internet_nsg_name'))]"
                            },
                            "serviceEndpoints": [
                                {
                                    "service": "Microsoft.KeyVault",
                                    "locations": [
                                        "*"
                                    ]
                                }
                            ],
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Enabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }
                    },
                    {
                        "name": "private-endpoints",
                        "properties": {
                            "addressPrefix": "10.8.2.0/24",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('default_nsg_name'))]"
                            },
                            "serviceEndpoints": [
                                {
                                    "service": "Microsoft.KeyVault",
                                    "locations": [
                                        "*"
                                    ]
                                }
                            ],
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }
                    },
                    {
                        "name": "Servers",
                        "properties": {
                            "addressPrefix": "10.8.1.0/24",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('default_nsg_name'))]"
                            },
                            "serviceEndpoints": [
                                {
                                    "service": "Microsoft.KeyVault",
                                    "locations": [
                                        "*"
                                    ]
                                }
                            ],
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Enabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }
                    }
                ],
                "virtualNetworkPeerings": [
                ],
                "enableDdosProtection": false
            }
        }
    ]
}
